# color-recall

./: Cargo.toml  README.md  index.html  ja.html  zh.html
.github/workflows/: web.yml
assets/: index-Bc3nGBSb.js  index-BsbBVzgV.js  index-CEcpcJ1N.js  index-CHIn7sWY.js  index-Cqwzklc6.js  index-DAUJXcCI.js  index-DhxpFSAY.js  index-DpObdIkt.js  index-v-1wUXS4.js  main-B4xfXXnQ.js  main-CKhHcC7v.js  main-DE0yxd3H.js  yume_color_recall_web_bg-0yFsFnE9.wasm  yume_color_recall_web_bg-5PnFJAjt.wasm  yume_color_recall_web_bg-6xq0MDYW.wasm  yume_color_recall_web_bg-CBKyyD2w.wasm  yume_color_recall_web_bg-CYq47BCE.wasm  yume_color_recall_web_bg-D7-EIwu6.wasm  yume_color_recall_web_bg-DFBsGywq.wasm
crates/yume-color-recall-web/: Cargo.toml  LICENSE_MIT
crates/yume-color-recall-web/src/: lib.rs
crates/yume-color-recall-web/ui/: index.html  ja.html  package.json  vite.config.ts  zh.html
crates/yume-color-recall-web/ui/src/: App.tsx  i18n.ts
src/: game.rs
