[package]
name = "color-recall"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2.19"
palette = { workspace = true }
rand = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }


[workspace]
members = ["crates/yume-color-recall-web"]

[workspace.dependencies]
color-recall = { path = "." }
rand = "0.8.5"
palette = "0.7.6"
wasm-bindgen = "0.2.95"

[profile.release.package.yume-color-recall-web]
opt-level = "s"
